# data_quality_api

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: planning-brainstorm.md  planning-checkpoint.md  planning-draft.md  planning-drafts.md  planning-goto-feature.md  planning-idea.md  (+8 more)
action_libraries/: README.md
catalog_libraries/: README.md  customer_domain.yaml
configs/: README.md  external_upload.example.yaml
docs/: ACTIONS_AND_JOB_DEFINITIONS.md  API_CONTRACTS.md  ARCHITECTURE.md  ARCHITECTURE_FILE_STRUCTURE.md  BACKLOG.md  BRD.md  CONTEXT_FACADE.md  CONTRACT_ARCHITECTURE_IMPLEMENTATION_NOTES.md  CONTRACT_DRIVEN_ARCHITECTURE.md  DATA_DOCS_STRATEGY.md  DATA_MODEL_REFERENCE.md  EXECUTION_ENGINES.md  FUNCTIONAL_REQUIREMENTS.md  METADATA_LAYER_SPEC.md  METADATA_PILLARS.md  NON_FUNCTIONAL_REQUIREMENTS.md  RBAC_MODEL.md  README.md  SECURITY_GUIDE.md  STAKEHOLDER_DECISIONS.md  STORES_AND_PERSISTENCE.md  WORKFLOW_SEQUENCES.md
governance_libraries/: README.md
infra/: README.md
infra_libraries/: README.md
prompts/: update_profiling_validation_context.md
rule_libraries/: README.md  __init__.py  loader.py
schema_libraries/: README.md
scripts/: README.md  extend_security_structure.sh  init_structure.sh  parse_checkpoints.py  seed_catalog.py  test_checkpoint_commands.py  validate_catalog_changes.py  validate_checkpoints.py  verify_catalog_refactor.py
specs/: BRAINSTORMING_EXTENSION_DESIGN.md  PHASE_4_COMPLETION_REPORT.md  PLANNING_SYSTEM_TEST_PLAN.md  PROJECT_ROADMAP.md  README.md  WORKFLOW_EXAMPLES.md
src/: README.md
tests/: README.md
(+215 files in other folders)
