[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data_quality_api"
version = "0.1.0"
description = "Wemetrix Data Quality & Governance Platform"
authors = [{ name = "John Garos", email = "johng@wemetrix.com" }]
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "pydantic",
  "pytest",
  # ...add other runtime dependencies here
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
